packages/related/test/tests/test_plan_execution/logs/snapshots/node_error_in_test.txt
------------ 2 executions to run ------------
1 with node (node_worker_thread@<mock>)
1 with node_2 (node_child_process@<mock>)
---------------------------------------------

✖ error_in_test.spec.js [node/<mock>/<mock>] 1/2 (1 failed, 1 remaining)
--------------- error ----------------
1 | throw new Error("here");
          ^
Error: here
  at <mock>/error_in_test.spec.js:1:7
--------------------------------------
✖ error_in_test.spec.js [node_2/<mock>/<mock>] 2/2 (all failed)
--------------- error ----------------
1 | throw new Error("here");
          ^
Error: here
  at <mock>/error_in_test.spec.js:1:7
--------------------------------------

------------------ summary ------------------
2 executions: all failed
duration: <mock>
---------------------------------------------